On click pop over Problem fixed, Other's profile edit disable

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
@@ -8,6 +8,7 @@
         height: 120px;
         width: @img-width;
         border-radius: 60px;
+        margin-bottom:10px;
     }
     .profile-image-center{
         width: @img-width;
