--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -14,5 +14,6 @@
             <question-panel [question]="question"></question-panel>
         </div>
     </div>
-
 </div>
+<!-- For Hover pop up get some space to show -->
+<div style="height:200px;position:relative;"></div> 
