--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -25,3 +25,5 @@
     <nav-bar></nav-bar>
     <router-outlet></router-outlet>
 </div>
+<!-- For Hover pop up get some space to show -->
+<div style="height:200px;position:relative;"></div> 
