--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,11 +1,14 @@
 ﻿
 <style>
     .edit {
-        color: #f6912b;
+        /*color: #f6912b;*/
+        font-size: 13px;
     }
 
         .edit:hover {
             text-decoration: underline;
+            visibility: visible;
+            color: #f6912b;
         }
 
     .fa-li {
@@ -67,7 +70,10 @@
     </div>
     <div class="col-md-3 top-spacing">
         <div>
-            <h3>Credentials</h3>
+            <h3>
+                Credentials
+                <a  class="edit"><span><i class="fa fa-edit"></i></span> </a>
+            </h3>
 
             <ul class="credential-panel">
                 <li>
