akash:Virtual store added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddCategory.cshtml
@@ -12,15 +12,18 @@
     .table {
         margin-left: 244px;
     }
+
     .form-horizontal {
         height: 522px;
     }
+
     .create-button {
         margin-left: 8.666667%;
     }
+
     textarea {
         width: 275px;
-    height: 89px;
+        height: 89px;
     }
 </style>
 @{
@@ -28,8 +31,7 @@
     listItems.Add(new SelectListItem
     {
         Text = "icon-dice",
-        Value = "icon-dice",
-        Selected = true
+        Value = "icon-dice"
     });
     listItems.Add(new SelectListItem
     {
@@ -37,11 +39,16 @@
         Value = "icon-chart"
 
     });
-    //listItems.Add(new SelectListItem
-    //{
-    //    Text = "AWS",
-    //    Value = "AWS"
-    //});
+
+    int foundSelectedIndex = listItems.FindIndex(x => x.Value == Model.Icon);
+
+    if (foundSelectedIndex == -1 || foundSelectedIndex>listItems.Count-1)
+    {
+        foundSelectedIndex = 0;
+    }
+
+    listItems[foundSelectedIndex].Selected = true;
+
 }
 
 <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
@@ -52,12 +59,12 @@
         <img class="left-border" src="~/images/border.png" />
 
         <section>
-            
+
             @using (Html.BeginForm("AddCategory", "Category", FormMethod.Post, new { area = "Admin", enctype = "multipart/form-data", @class = "form-horizontal", @role = "form" }))
             {
-                <h4>Add Category</h4>
-                <br/>
-                <br/>
+                <h4>@ViewData["Category"]</h4>
+                <br />
+                <br />
                 <hr />
 
                 @Html.ValidationSummary(true)
@@ -65,13 +72,13 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Name, new { @class = "col-sm-offset-1 col-md-2" })
                     <div class="col-sm-offset-1 col-md-10">
-                        @Html.EditorFor(model => model.Name, new {htmlAttributes = new {placeholder = "Input name", @class = "form-control"}})
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { placeholder = "Input name", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Name)
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Description, new {@class = "col-sm-offset-1 col-md-2" })
+                    @Html.LabelFor(model => model.Description, new { @class = "col-sm-offset-1 col-md-2" })
                     <div class="col-sm-offset-1 col-md-10">
                         @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { placeholder = "Input description", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Description)
@@ -79,9 +86,9 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Icon, new {@class = "col-sm-offset-1 col-md-2" })
+                    @Html.LabelFor(model => model.Icon, new { @class = "col-sm-offset-1 col-md-2" })
                     <div class="col-sm-offset-1 col-md-10">
-                        @Html.DropDownList("Icon", listItems, new {  placeholder = "Input icons", @class = "form-control"  })
+                        @Html.DropDownList("Icon", listItems, new { placeholder = "Input icons", @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Description)
                     </div>
                 </div>
@@ -91,58 +98,31 @@
                     </label>
 
                     <div class="col-sm-offset-1 col-md-10">
-                        @Html.TextBox("Image", Model.ImagePath, new {type = "file", @class = "form-control" })
+                        @Html.TextBox("Image", Model.ImagePath, new { type = "file", @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Image)
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10 create-button">
-                        <input type="submit" value="Create" class="btn btn-default"/>
+                        <input type="submit" value="Create" class="btn btn-default" />
                     </div>
                 </div>
-
-
-
-                    @*<div class="form-group">
-                            <hr/>
-
-                            <div class="col-sm-offset-1 col-md-10">
-                                <input type="text" id="name" name="name" placeholder="Name" class="form-control" minlength="2" required/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-1 col-md-10">
-                                <input type="text" id="description" name="description" placeholder="Description" class="form-control" minlength="2" required />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-1 col-md-10">
-                                <input type="file" id="file" placeholder="file" class="form-control-file" minlength="2" accept=".jpg" name="file" />
-                            </div>
-                        </div>
-                        <br />
-                        <div class="form-group">
-                            <div class="col-sm-offset-1 col-md-10">
-                                <input type="submit" value="Save" class="btn btn-default">
-                            </div>
-                        </div>*@
-
-
             }
         </section>
 
         @* =============== *@
         @{
-            <br/>
+            <br />
 
             if (ViewBag.Message != null)
             {
                 <h1 class="alert alert-danger">@ViewBag.Message</h1>
                 ViewData.Clear();
             }
+
         }
 
-       
+
 
     </div>
 
