--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -1,17 +1,17 @@
 ﻿<div class="status-panel">
     <img *ngIf="questionObj?.answers[0]?.likes?.length<1" (click)="submitLike(answerObj?.id,questionObj.id)" src='../images/fade-logo.png' onmouseover="this.src = '../images/like-logo.png';" onmouseout="this.src = '../images/fade-logo.png';" />
     <img *ngIf="questionObj?.answers[0]?.likes?.length>0" src='../images/like-logo.png' />
-    <a href="#" data-toggle="modal" attr.data-target="#likeModal{{commentId}}" class="number-box" (click)="showLikeUserDetails()"> {{isQuestion?(questionObj.likes.length):(answerObj?.likes?.length)}}</a>
+    <a href="#" data-toggle="modal" attr.data-target="#likeModal{{commentId}}" class="number-box status-line" (click)="showLikeUserDetails()"> {{isQuestion?(questionObj.likes.length):(answerObj?.likes?.length)}}</a>
     <a (click)="submitLike(answerObj?.id,questionObj.id)"><div class="status-line">{{questionObj.likes.length>1?'Likes':'Like'}}</div></a>
     <div class="status-line like-border "></div>
-    <div class="status-line number-box">{{questionObj?.viewCount?questionObj?.viewCount:0}}</div>
+    <div class="status-line number-box status-line">{{questionObj?.viewCount?questionObj?.viewCount:0}}</div>
     <div class="status-line">Leidos</div>
     {{likedUsers?.length}}
-    <div class="number-box">
+    <div class="number-box status-line">
         {{CommentCount}}
     </div>
     <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{commentId}}">Comentarios</a>
-    <div class="status-line number-box">{{questionObj?.answerCount}}</div>
+    <div class="status-line number-box status-line">{{questionObj?.answerCount}}</div>
     <div class="status-line">Respuestas</div>
 
     <!--==========Right Side=====-->
